# rise

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  linter-report.txt  manage.py  migracao.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: django.yml
api/: serializers.py  urls.py  views.py
bank/: admin.py  forms.py  models.py  urls.py  views.py
bank/migrations/: 0001_initial.py  0002_auto_20210707_1526.py  0003_alter_donation_semana.py  0004_auto_20210707_1542.py  0005_semana_recurso.py  0006_credito.py  0007_alter_credito_ally_alter_credito_quantidade.py  0008_alter_credito_quantidade.py  0009_credito_diferenca.py
bank/templates/bank/: credits.html  index.html  report.html  week.html
config/: admin.py  forms.py  models.py  urls.py  views.py
config/migrations/: 0001_initial.py  0002_alter_siteconfig_encerra_ranking.py  0003_siteconfig_banner.py  0004_destaque.py  0005_alter_destaque_texto.py
config/templates/config/: index.html
docs/: about.md  index.md  mge.md  players.md
equipments/: admin.py  forms.py  models.py  urls.py  views.py
equipments/migrations/: 0001_initial.py  0002_buff_alter_equipamento_miniatura_equipamento_buffs.py  0003_remove_equipamento_buffs_buff_equipamento.py  0004_buff_ativacao.py  0005_alter_buff_ativacao.py  0006_equipamento_slot.py  0007_alter_equipamento_miniatura.py  0008_alter_equipamento_slot.py  0009_alter_buff_spec.py  0010_buff_status_alter_buff_spec_alter_equipamento_slot.py  0011_equipamento_ativacao_alter_equipamento_slot.py  0012_remove_equipamento_ativacao.py  0013_alter_equipamento_nome_conjunto.py  0014_alter_buff_status.py  0015_buffconjunto_alter_conjunto_buff_duo_and_more.py  0016_remove_conjunto_buff_duo_remove_conjunto_buff_quadro_and_more.py  0017_alter_buffconjunto_pecas.py  0018_alter_buffconjunto_pecas.py
equipments/templates/equipments/: add.html  conjuntos.html  index.html
ghevent/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ghevent/migrations/: 0001_initial.py  0002_eventogh_tipo.py  0003_eventogh_anotacao.py
ghevent/templates/ghevent/: ghevent.html  index.html
items/: admin.py  forms.py  models.py  urls.py  views.py
items/migrations/: 0001_initial.py
items/templates/items/: index.html
kvk/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
kvk/migrations/: 0001_initial.py  0002_desempenho.py  0003_auto_20210724_2100.py  0004_zerado_kvk_final_delete_desempenho_zerado_kvk_and_more.py  0005_adicionaldefarms.py  0006_etapas.py  0007_alter_etapas_date.py  0008_alter_zerado_date.py  0009_alter_zerado_date.py  0010_pontosdemge.py  0011_cargo.py  0012_kvk_primeira_luta.py  0013_alter_kvk_final_alter_kvk_primeira_luta.py  0014_alter_kvk_tipo.py  0015_pontosdemge_mortes.py  0016_consolidado.py  0017_alter_consolidado_cor.py  0018_rename_cor_consolidado_cor_dt_and_more.py  0019_alter_consolidado_posicao_kp.py  0020_kvkstatus.py  0021_batalha.py  0022_consolidado_t4_kill_consolidado_t5_kill.py
kvk/templates/kvk/: analise.html  cargo.html  config.html  dkp.html  etapa.html  index.html  kvk.html  status_dkp.html  upload.html
kvk/templatetags/: filters.py
mge/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mge/migrations/: 0001_initial.py  0002_auto_20210723_1720.py  0003_auto_20210723_1722.py  0004_auto_20210723_1724.py  0005_auto_20210723_2015.py  0006_inscrito_deaths_inscrito_kills.py  0007_inscrito_general.py  0008_mge_tipo.py  0009_comandante_mge_tipo_mge.py  0010_eventodepoder.py  0011_inscrito_intuito.py  0012_alter_inscrito_kills.py  0013_alter_eventodepoder_inserido_alter_inscrito_inserido_and_more.py  0014_mge_livre_mge_temporada.py  0015_mge_inicio_das_inscricoes.py  0016_inscrito_gh_inscrito_prioridade_inscrito_situacao.py
mge/templates/mge/: index.html  mge.html
mge/templatetags/: mgefilters.py
osiris/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
osiris/migrations/: 0001_initial.py  0002_alter_time_ally.py  0003_alter_time_ally.py  0004_alter_time_ally.py  0005_alter_marcha_tarefa.py  0006_alter_marcha_tarefa.py
osiris/templates/osiris/: index.html  marchas.html  time.html
players/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
players/migrations/: 0001_initial.py  0002_auto_20210701_1056.py  0003_player_observacao.py  0004_alter_player_alliance.py  0005_alter_playerstatus_power.py  0006_alter_player_observacao.py  0007_alter_player_observacao.py  0008_auto_20210701_1635.py  0009_alter_player_options.py  0010_alter_player_game_id.py  0011_alter_player_observacao.py  0012_player_specialization.py  0013_rename_specialization_player_specialty.py  0014_alter_player_status.py  0015_alter_player_observacao.py  0016_auto_20210716_1614.py  0017_alter_playerstatus_data.py  0018_alter_player_game_id.py  0019_advertencia.py  0020_alter_player_status.py  0021_alter_playerstatus_killpoints.py  0022_alter_advertencia_inicio_alter_playerstatus_data.py  0023_alter_player_status.py  0024_player_farms.py  0025_player_func.py  0026_alter_player_game_id.py  0027_playerstatus_killst4_playerstatus_killst5.py
players/signals/: handlers.py
players/templates/players/: advertencias.html  alianca.html  antigos.html  confirm.html  edit.html  editastatus.html  emkvk.html  player.html  review.html  searchresult.html  semstatus.html  spec.html  top300.html  upload.html
players/templatetags/: risefilters.py
reports/: forms.py  urls.py  views.py
reports/templates/reports/: analise.html  buscaespecial.html  hall.html  index.html  rev300.html  top300.html
rise/: asgi.py  email.py  forms.py  settings.py  urls.py  views.py  wsgi.py
static/ang/: main.js
tasks/: forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_uuid.py  0003_task_descricao_task_script_alter_task_nome_da_task.py  0004_alter_task_uuid.py  0005_alter_task_uuid.py  0006_alter_task_ultima_execucao.py
tasks/scripts/: inativos.py  resizeimages.py  script.py  sotwarestats.py  top500.py
utils/: datas.py  fix_dates.py
(+9 files in other folders)
